fixed email issue

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div id="name">
             <h1 class="name">Angelique Hilario</h1>
         </div>
-        <h2>I enjoy creating mobile apps that focus on solving real-life problems through innovative and user-friendly solutions. With experience in Python and Java, I have a strong foundation in object-oriented programming (OOP) principles, which I apply to develop efficient and maintainable code. Additionally, I have skills in web development, including HTML and CSS, allowing me to build seamless and responsive interfaces. My passion lies in combining these technologies to deliver impactful mobile applications that enhance everyday experiences.</h2>
-    <!-- You can add welcome text or leave empty -->
+        <p>I enjoy creating mobile apps that focus on solving real-life problems through innovative and user-friendly solutions. With experience in Python and Java, I have a strong foundation in object-oriented programming (OOP) principles, which I apply to develop efficient and maintainable code. Additionally, I have skills in web development, including HTML and CSS, allowing me to build seamless and responsive interfaces. My passion lies in combining these technologies to deliver impactful mobile applications that enhance everyday experiences.</p>
     </div>
+    <div class="Certifications"></div>
 
 
 
@@ -58,12 +58,16 @@
                     </div>
 
                     <div class="project-card">
-                        <h3 class="project-title">Brand Identity</h3>
-                        <p class="project-description">Complete brand identity design including logo, color palette, and marketing materials for a tech startup.</p>
+                        <h3 class="project-title">
+                            <a href="https://creative-dusk-602091.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                Weather API
+                            </a>
+                        </h3>
+                        <p class="project-description">A simple RESTful API that returns current weather data for a given city.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">Branding</span>
-                            <span class="tech-tag">Logo Design</span>
-                            <span class="tech-tag">Adobe Creative Suite</span>
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">Express</span>
+                            <span class="tech-tag">OpenWeatherMap</span>
                         </div>
                     </div>
                 </div>
@@ -103,7 +107,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         (function() {
-            emailjs.init("NamI92QRfeRTW6MF0"); // Add your EmailJS public key here
+            emailjs.init("NamI92QRfeRTW6MF0"); 
         })();
     </script>
     <script src="index.js"></script>
