--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
                     <div class="project-card" data-tilt>
                         <div class="project-number">02</div>
-                        <h3 class="project-title">Mobile UI Design</h3>
-                        <p class="project-description">A comprehensive mobile interface design featuring innovative layouts and seamless user interactions.</p>
+                        <h3 class="project-title">Non Profit Website</h3>
+                        <p class="project-description">A website for a company called GetItDone. they offer low skilled workshops for the unemployed..</p>
                         <div class="project-tech">
                             <span class="tech-tag">Figma</span>
                             <span class="tech-tag">UI/UX</span>
