--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                 <div class="projects-grid fade-in-grid"></div>
                     <div class="project-card" data-tilt>
                         <div class="project-number">01</div>
-                        <h3 class="project-title">Golden Arrow ChatBot</h3>
+                        <h3 class="project-title">
+                            <a href="https://github.com/DevLique/Golden-Arrow-Whatsapp-Information-Bot-" target="_blank" rel="noopener noreferrer">
+                                Golden Arrow ChatBot
+                            </a>
+                        </h3>
                         <p class="project-description">A chatbot that helps users find information quickly and easily.</p>
                         <div class="project-tech">
                             <span class="tech-tag">HTML</span>
