--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <div class="project-card" data-tilt>
                         <div class="project-number">02</div>
                         <h3 class="project-title">Non Profit Website</h3>
+                        <a href="https://a1getitdone.netlify.app/"
                         <p class="project-description">A website for a company called GetItDone. they offer low skilled workshops for the unemployed..</p>
                         <div class="project-tech">
                             <span class="tech-tag">Figma</span>
