fiexed web design and made it responsive

--- a/index.html
+++ b/index.html
@@ -29,6 +29,45 @@
                 </div>
                 <p class="bio-text">I enjoy creating mobile apps that focus on solving real-life problems through innovative and user-friendly solutions. With experience in <span class="highlight-skill">Python</span> and <span class="highlight-skill">Java</span>, I have a strong foundation in object-oriented programming (OOP) principles, which I apply to develop efficient and maintainable code. Additionally, I have skills in web development, including <span class="highlight-skill">HTML</span> and <span class="highlight-skill">CSS</span>, allowing me to build seamless and responsive interfaces. My passion lies in combining these technologies to deliver impactful mobile applications that enhance everyday experiences.</p>
                 
+                <!-- Certificates Carousel -->
+                <div class="certificates-carousel">
+                    <h3 class="carousel-title">My Certifications</h3>
+                    <div class="carousel-container">
+                        <button class="carousel-btn prev-btn" aria-label="Previous certificate">‹</button>
+                        <div class="carousel-track-container">
+                            <div class="carousel-track">
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image1.png" alt="Certificate 1" class="cert-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image2.png" alt="Certificate 2" class="cert-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image3.png" alt="Certificate 3" class="cert-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image4.png" alt="Certificate 4" class="cert-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image5.png" alt="Certificate 5" class="cert-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="assets/certs/image6.png" alt="Certificate 6" class="cert-image">
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-btn next-btn" aria-label="Next certificate">›</button>
+                    </div>
+                    <div class="carousel-indicators">
+                        <span class="indicator active" data-slide="0"></span>
+                        <span class="indicator" data-slide="1"></span>
+                        <span class="indicator" data-slide="2"></span>
+                        <span class="indicator" data-slide="3"></span>
+                        <span class="indicator" data-slide="4"></span>
+                        <span class="indicator" data-slide="5"></span>
+                    </div>
+                </div>
+                
                 <!-- Floating particles -->
                 <div class="particles">
                     <span class="particle"></span>
@@ -42,9 +81,8 @@
             <!-- Projects Tab -->
             <div id="projects" class="tab-content">
                 <h2 class="section-title animated-title">My Projects</h2>
-                <div class="projects-grid fade-in-grid"></div>
+                <div class="projects-grid fade-in-grid">
                     <div class="project-card" data-tilt>
-                        <div class="project-number">01</div>
                         <h3 class="project-title">
                             <a href="https://github.com/DevLique/Golden-Arrow-Whatsapp-Information-Bot-" target="_blank" rel="noopener noreferrer">
                                 Golden Arrow ChatBot
@@ -59,10 +97,12 @@
                     </div>
 
                     <div class="project-card" data-tilt>
-                        <div class="project-number">02</div>
-                        <h3 class="project-title">Non Profit Website</h3>
-                        <a href="https://a1getitdone.netlify.app/"
-                        <p class="project-description">A website for a company called GetItDone. they offer low skilled workshops for the unemployed..</p>
+                        <h3 class="project-title">
+                            <a href="https://a1getitdone.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                Non Profit Website
+                            </a>
+                        </h3>
+                        <p class="project-description">A website for a company called GetItDone. they offer low skilled workshops for the unemployed.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Figma</span>
                             <span class="tech-tag">UI/UX</span>
@@ -71,7 +111,6 @@
                     </div>
 
                     <div class="project-card" data-tilt>
-                        <div class="project-number">03</div>
                         <h3 class="project-title">
                             <a href="https://creative-dusk-602091.netlify.app/" target="_blank" rel="noopener noreferrer">
                                 Weather API
@@ -93,9 +132,7 @@
 
                 <!-- social links (add under the heading) -->
                 <div class="social-links" aria-label="Social links">
-                    <a class="social-link" href="www.linkedin.com/in/angelique-hilario-lique007
-
-" target="_blank" rel="noopener noreferrer" aria-label="Visit my LinkedIn">
+                    <a class="social-link" href="https://www.linkedin.com/in/angelique-hilario-lique007" target="_blank" rel="noopener noreferrer" aria-label="Visit my LinkedIn">
                         <!-- LinkedIn SVG -->
                         <svg class="social-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true">
                             <title>LinkedIn</title>
